// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 1440px;
  padding: 16px;
}

@media (min-width:768px) {
  .c0 {
    padding: 14px;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with maxWidth 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 600px;
  padding: 16px;
}

@media (min-width:768px) {
  .c0 {
    padding: 14px;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;

exports[`it works with padding 1`] = `
.c0 {
  position: relative;
  margin: 0 auto;
  max-width: 1440px;
  padding: 60px;
}

@media (min-width:768px) {
  .c0 {
    padding: 60px;
  }
}

<div
  className="c0"
>
  <p>
    Hello world!
  </p>
</div>
`;
